stopped word wrap onload to get standard work table size

--- a/tyler.css
+++ b/tyler.css
@@ -7,6 +7,7 @@ html {-webkit-text-size-adjust: none;}
 #work{
    display:table;
    margin: 0 auto;
+   white-space:nowrap;
 }
 #link{
    display:table-cell;
